--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,10 +64,13 @@ jobs:
         DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
       run: make push
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
+    - name: Execute remote SSH commands using password
+      uses: appleboy/ssh-action@v1.0.3
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_LOGIN }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        port: 22
 
     - name: Deploy to server
       env:
