--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,7 +81,7 @@ jobs:
         run:
         script: |
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
-            docker stop${{ secrets.DOCKER_REPO }} || true
-            docker rm ${{ secrets.DOCKER_REPO }} || true
+            docker stop ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }} || true
+            docker rm ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }} || true
             docker run -d --name ${{ secrets.DOCKER_REPO }} -e TELEGRAM_BOT_TOKEN=$(TELEGRAM_BOT_TOKEN) -e OPENAI_API_KEY=$(OPENAI_API_KEY) -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
           
