--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,15 +32,7 @@ jobs:
         poetry config virtualenvs.create false
         poetry install --no-dev
 
-    - name: Lint with flake8
-      run: |
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Test with pytest
-      run: |
-        poetry run pytest
-      continue-on-error: true
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -66,8 +58,6 @@ jobs:
 
     - name: Execute remote SSH commands using password and deploy
       env:
-        SSH_HOST: ${{ secrets.SERVER_HOST }}
-        SSH_USERNAME: ${{ secrets.SERVER_LOGIN }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -80,8 +70,5 @@ jobs:
         port: 22
         run:
         script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
-            docker stop ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }} || true
-            docker rm ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }} || true
-            docker run -d --name ${{ secrets.DOCKER_REPO }} -e TELEGRAM_BOT_TOKEN=$(TELEGRAM_BOT_TOKEN) -e OPENAI_API_KEY=$(OPENAI_API_KEY) -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
-          
+            make dockerpull
+            make dockerrun
