--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,9 +23,8 @@ jobs:
 
     - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        echo 'export PATH="$HOME/.local/bin:$PATH"' >> $GITHUB_ENV
-        source $GITHUB_ENV
+        python -m pip install --upgrade pip
+        pip install -r req.txt
 
     - name: Install dependencies
       run: |
