--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,16 +21,10 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install Poetry
+    - name: Install reqs
       run: |
         python -m pip install --upgrade pip
         pip install -r req.txt
-
-    - name: Install dependencies
-      run: |
-        poetry config virtualenvs.create false
-        poetry install --no-dev
-
 
 
     - name: Log in to Docker Hub
